# web-client-cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  pat.patch
nginx/: nginx.conf
src/: handlers.hpp  http.cpp  http.hpp  main.cpp  redis.cpp  redis.hpp  session.hpp  utils.hpp
src/api/: auth_client.cpp  auth_client.hpp  main_client.cpp  main_client.hpp
src/handlers/: common.cpp  common.hpp  login.cpp  logout.cpp  root.cpp
